--- a/oc_commissions.html
+++ b/oc_commissions.html
@@ -268,7 +268,7 @@
                     <!--=== End Header Project Full With & content bottom ===-->
 
 
-                    <div class="wrapper block-large-1-2 block-tab-full collapse ">
+                    <div data-dsn-title="Biki" class="wrapper block-large-1-2 block-tab-full collapse ">
                         <br>
                     <hr color="Gray">
                     <br>
@@ -287,7 +287,7 @@
                     </div>
                     <hr color="Gray">
                     <br>
-                    <div style="position:relative; left: 17.5px;" class="row s-portfolio__list block-large-1-2 block-tab-full collapse over-hidden">
+                    <div  style="position:relative; left: 17.5px;" class="row s-portfolio__list block-large-1-2 block-tab-full collapse over-hidden">
                         <div class="column" data-aos="fade-up">
                             <div class="folio-item ">
                                 <div class="has-popup folio-item__thumb">
@@ -319,7 +319,7 @@
                                 </div>
                                 <a target=”blank” href="https://www.pixiv.net/en/artworks/95052320" title="PIXIV" class="folio-item__project-link">Pixiv</a>
                                 <div class="folio-item__caption">
-                                    <p>Cyanide</p>
+                                    <p>Biki</p>
                                 </div>
                             </div>
                         </div>
@@ -337,7 +337,7 @@
                                 </div>
                                 <a target=”blank” href="https://www.pixiv.net/en/artworks/95052320" title="PIXIV" class="folio-item__project-link">Pixiv</a>
                                 <div class="folio-item__caption">
-                                    <p>Cyanide</p>
+                                    <p>Biki</p>
                                 </div>
                             </div>
                         </div>
@@ -395,14 +395,14 @@
                 <!--=== End Intro Project ===-->
                         
                         
-                        <br>
-                        <hr color="Gray">
+                        <br data-dsn-title="Cyanide">
+                        <hr  color="Gray">
                         <br>
                         <center>
-                            <h1 style="font-size: 60px;" class="p-relative dsn-text" data-dsn-animate="section">Cyanide</h1>
+                            <h1  style="font-size: 60px;" class="p-relative dsn-text" data-dsn-animate="section">Cyanide</h1>
                         </center>
 
-                        <div class="container section-margin ">
+                        <div  class="container section-margin ">
                             <div class="p-relative">
                                 <img src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" data-dsn-src="assets/img/project/project1/Cyanide's Ref Sheet tweet.png" data-dsn-srcset="assets/img/project/project2/project1/Cyanide's Ref Sheet tweet.png 1800w,assets/img/project/project1/Cyanide's Ref Sheet tweet.png 768w"
                                     class="has-bigger-scale w-100" alt="">
@@ -520,7 +520,7 @@
                     </div>
                     <!--=== End Intro Project ===-->
 
-                    <div class="wrapper block-large-1-2 block-tab-full collapse ">
+                    <div class="wrapper block-large-1-2 block-tab-full collapse " data-dsn-title="Rymm">
                         <br>
                         <hr color="Gray">
                         <br>
