--- a/CommStatus.html
+++ b/CommStatus.html
@@ -256,7 +256,7 @@
                         </div>
                     </header>
                     <hr>
-                    <iframe src="https://conservative-parrot.super.site/"></iframe>
+                    <iframe src="https://rudys-worklist.super.site/"></iframe>
                     <style>
                         iframe {
                             width: 100%;
