--- a/Commissions.html
+++ b/Commissions.html
@@ -278,8 +278,8 @@ class="header-page over-hidden p-relative header-padding-top header-padding-bott
             <div class="folio-item work-item dsn-col-md-2 dsn-col-lg-3 Product column fanart" data-aos="fade-up">
                 <div class="has-popup box-img before-z-index z-index-0 p-relative over-hidden folio-item__thumb"
                     data-overlay="0">
-                    <a class="  folio-item__thumb-link" target=”blank” href="assets/img/project/project1/Miku11.png" title="Cyanide" data-size="905x1280">
-                        <img class="" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" data-dsn-src="assets/img/project/project1/Miku11.png" alt=""></a>
+                    <a class="  folio-item__thumb-link" target=”blank” href="assets/img/project/project1/Miku11.jpg" title="Cyanide" data-size="905x1280">
+                        <img class="" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" data-dsn-src="assets/img/project/project1/Miku11.jpg" alt=""></a>
                 </div>
 
                 <div class="folio-item__info">
@@ -295,8 +295,8 @@ class="header-page over-hidden p-relative header-padding-top header-padding-bott
             <div class="folio-item work-item mt-80 dsn-col-md-2 dsn-col-lg-3 Product column fanart" data-aos="fade-up">
                 <div class="has-popup box-img before-z-index z-index-0 p-relative over-hidden folio-item__thumb"
                     data-overlay="0">
-                    <a class="  folio-item__thumb-link" target=”blank” href="assets/img/project/project2/owl jacket.png" title="Rymm" data-size="905x1280">
-                     <img class="cover-bg-img" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" data-dsn-src="assets/img/project/project2/owl jacket.png" alt="">
+                    <a class="  folio-item__thumb-link" target=”blank” href="assets/img/project/project2/owl jacket.jpg" title="Rymm" data-size="905x1280">
+                     <img class="cover-bg-img" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" data-dsn-src="assets/img/project/project2/owl jacket.jpg" alt="">
                     </a>
                 </div>
 
@@ -315,8 +315,8 @@ class="header-page over-hidden p-relative header-padding-top header-padding-bott
             <div class="folio-item work-item mt-80 dsn-col-md-2 dsn-col-lg-3 Product column fanart" data-aos="fade-up">
                 <div class="has-popup box-img before-z-index z-index-0 p-relative over-hidden folio-item__thumb"
                     data-overlay="0">
-                    <a class="  folio-item__thumb-link" target=”blank” href="assets/img/project/project1/Jacket.png" title="Biki" data-size="905x1280">
-                     <img class="cover-bg-img" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" data-dsn-src="assets/img/project/project1/Jacket.png" alt="">
+                    <a class="  folio-item__thumb-link" target=”blank” href="assets/img/project/project1/Jacket.jpg" title="Biki" data-size="905x1280">
+                     <img class="cover-bg-img" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" data-dsn-src="assets/img/project/project1/Jacket.jpg" alt="">
                     </a>
                 </div>
                 <div class="folio-item__info">
@@ -332,8 +332,8 @@ class="header-page over-hidden p-relative header-padding-top header-padding-bott
             <div class="folio-item work-item mt-80 dsn-col-md-2 dsn-col-lg-3 Product column comm" data-aos="fade-up">
                 <div class="has-popup box-img before-z-index z-index-0 p-relative over-hidden folio-item__thumb"
                     data-overlay="0">
-                    <a class="  folio-item__thumb-link" target=”blank” href="assets/img/project/project1/mia.png" title="Gura" data-size="905x1280">
-                     <img class="cover-bg-img" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" data-dsn-src="assets/img/project/project1/mia.png" alt="">
+                    <a class="  folio-item__thumb-link" target=”blank” href="assets/img/project/project1/mia.jpg" title="Gura" data-size="905x1280">
+                     <img class="cover-bg-img" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" data-dsn-src="assets/img/project/project1/mia.jpg" alt="">
                     </a>
                 </div>
 
@@ -352,8 +352,8 @@ class="header-page over-hidden p-relative header-padding-top header-padding-bott
             <div class="folio-item work-item mt-80 dsn-col-md-2 dsn-col-lg-3 Product column comm" data-aos="fade-up">
                 <div class="has-popup box-img before-z-index z-index-0 p-relative over-hidden folio-item__thumb"
                     data-overlay="0">
-                    <a class="  folio-item__thumb-link" target=”blank” href="assets/img/project/project1/Clopez.png" title="Gura" data-size="905x1280">
-                     <img class="cover-bg-img" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" data-dsn-src="assets/img/project/project1/Clopez.png" alt="Clopez">
+                    <a class="  folio-item__thumb-link" target=”blank” href="assets/img/project/project1/Clopez.jpg" title="Gura" data-size="905x1280">
+                     <img class="cover-bg-img" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" data-dsn-src="assets/img/project/project1/Clopez.jpg" alt="Clopez">
                     </a>
                 </div>
                 <div class="folio-item__info">
@@ -369,8 +369,8 @@ class="header-page over-hidden p-relative header-padding-top header-padding-bott
             <div class="folio-item work-item mt-80 dsn-col-md-2 dsn-col-lg-3 Product column comm loli bikini" data-aos="fade-up">
                 <div class="has-popup box-img before-z-index z-index-0 p-relative over-hidden folio-item__thumb"
                     data-overlay="0">
-                    <a class="  folio-item__thumb-link" target=”blank” href="assets/img/project/project1/CnBD.png" title="CB" data-size="905x1280">
-                     <img class="cover-bg-img" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" data-dsn-src="assets/img/project/project1/CnBD.png" alt="CB">
+                    <a class="  folio-item__thumb-link" target=”blank” href="assets/img/project/project1/CnBD.jpg" title="CB" data-size="905x1280">
+                     <img class="cover-bg-img" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" data-dsn-src="assets/img/project/project1/CnBD.jpg" alt="CB">
                     </a>
                 </div>
                 <div class="folio-item__info">
@@ -386,8 +386,8 @@ class="header-page over-hidden p-relative header-padding-top header-padding-bott
             <div class="folio-item work-item mt-80 dsn-col-md-2 dsn-col-lg-3 Product column commission bikini loli" data-aos="fade-up">
                 <div class="has-popup box-img before-z-index z-index-0 p-relative over-hidden folio-item__thumb"
                     data-overlay="0">
-                    <a class="  folio-item__thumb-link" target=”blank” href="assets/img/project/project1/CnBLB.png" title="Gura" data-size="905x1280">
-                     <img class="cover-bg-img" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" data-dsn-src="assets/img/project/project1/CnBLB.png" alt="CB">
+                    <a class="  folio-item__thumb-link" target=”blank” href="assets/img/project/project1/CnBLB.jpg" title="Gura" data-size="905x1280">
+                     <img class="cover-bg-img" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" data-dsn-src="assets/img/project/project1/CnBLB.jpg" alt="CB">
                     </a>
                 </div>
                 <div class="folio-item__info">
@@ -403,8 +403,8 @@ class="header-page over-hidden p-relative header-padding-top header-padding-bott
             <div class="folio-item work-item mt-80 dsn-col-md-2 dsn-col-lg-3 Product column commission  loli" data-aos="fade-up">
                 <div class="has-popup  before-z-index z-index-0 p-relative over-hidden folio-item__thumb"
                     data-overlay="0">
-                    <a class="  folio-item__thumb-link" target=”blank” href="assets/img/project/project1/rymddd ex reduced.png" title="Rymm" data-size="1280x905">
-                     <img class="cover-bg-img" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" data-dsn-src="assets/img/project/project1/rymddd ex reduced.png" alt="CB">
+                    <a class="  folio-item__thumb-link" target=”blank” href="assets/img/project/project1/rymddd ex reduced.jpg" title="Rymm" data-size="1280x905">
+                     <img class="cover-bg-img" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" data-dsn-src="assets/img/project/project1/rymddd ex reduced.jpg" alt="CB">
                     </a>
                 </div>
                 <div class="folio-item__info">
