--- a/allart.html
+++ b/allart.html
@@ -284,8 +284,8 @@
                                 <div class="folio-item work-item dsn-col-md-2 dsn-col-lg-3 Product column fanart" data-aos="fade-up">
                                     <div class="has-popup box-img before-z-index z-index-0 p-relative over-hidden folio-item__thumb"
                                         data-overlay="0">
-                                        <a class="  folio-item__thumb-link" target=”blank” href="assets/img/project/project1/Miku11.png" title="Gura" data-size="905x1280">
-                                            <img class="" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" data-dsn-src="assets/img/project/project1/Miku11.png" alt=""></a>
+                                        <a class="  folio-item__thumb-link" target=”blank” href="assets/img/project/project1/Miku11.jpg" title="Gura" data-size="905x1280">
+                                            <img class="" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" data-dsn-src="assets/img/project/project1/Miku11.jpg" alt=""></a>
                                     </div>
 
                                     <div class="folio-item__info">
@@ -301,8 +301,8 @@
                                 <div class="folio-item work-item mt-80 dsn-col-md-2 dsn-col-lg-3 Product column fanart" data-aos="fade-up">
                                     <div class="has-popup box-img before-z-index z-index-0 p-relative over-hidden folio-item__thumb"
                                         data-overlay="0">
-                                        <a class="  folio-item__thumb-link" target=”blank” href="assets/img/project/project1/Makima1.png" title="Gura" data-size="905x1280">
-                                         <img class="cover-bg-img" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" data-dsn-src="assets/img/project/project1/Makima1.png" alt="">
+                                        <a class="  folio-item__thumb-link" target=”blank” href="assets/img/project/project1/Makima1.jpg" title="Gura" data-size="905x1280">
+                                         <img class="cover-bg-img" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" data-dsn-src="assets/img/project/project1/Makima1.jpg" alt="">
                                         </a>
                                     </div>
 
@@ -321,8 +321,8 @@
                                 <div class="folio-item work-item mt-80 dsn-col-md-2 dsn-col-lg-3 Product column bocchi loli fanart" data-aos="fade-up">
                                     <div class="has-popup box-img before-z-index z-index-0 p-relative over-hidden folio-item__thumb"
                                         data-overlay="0">
-                                        <a class="  folio-item__thumb-link" target=”blank” href="assets/img/project/project1/bocchi 1.png" title="Bocchi" data-size="905x1280">
-                                         <img class="cover-bg-img" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" data-dsn-src="assets/img/project/project1/bocchi 1.png" alt="Bocchi">
+                                        <a class="  folio-item__thumb-link" target=”blank” href="assets/img/project/project1/bocchi 1.jpg" title="Bocchi" data-size="905x1280">
+                                         <img class="cover-bg-img" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" data-dsn-src="assets/img/project/project1/bocchi 1.jpg" alt="Bocchi">
                                         </a>
                                     </div>
 
@@ -339,8 +339,8 @@
                                 <div class="folio-item work-item mt-80 dsn-col-md-2 dsn-col-lg-3 Product column comm" data-aos="fade-up">
                                     <div class="has-popup box-img before-z-index z-index-0 p-relative over-hidden folio-item__thumb"
                                         data-overlay="0">
-                                        <a class="  folio-item__thumb-link" target=”blank” href="assets/img/project/project1/mia.png" title="Gura" data-size="905x1280">
-                                         <img class="cover-bg-img" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" data-dsn-src="assets/img/project/project1/mia.png" alt="">
+                                        <a class="  folio-item__thumb-link" target=”blank” href="assets/img/project/project1/mia.jpg" title="Gura" data-size="905x1280">
+                                         <img class="cover-bg-img" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" data-dsn-src="assets/img/project/project1/mia.jpg" alt="">
                                         </a>
                                     </div>
 
@@ -357,8 +357,8 @@
                                 <div class="folio-item work-item mt-80 dsn-col-md-2 dsn-col-lg-3 Product column fanart" data-aos="fade-up">
                                     <div class="has-popup box-img before-z-index z-index-0 p-relative over-hidden folio-item__thumb"
                                         data-overlay="0">
-                                        <a class="  folio-item__thumb-link" target=”blank” href="assets/img/project/project1/moona_susno.png" title="Gura" data-size="905x1280">
-                                         <img class="cover-bg-img" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" data-dsn-src="assets/img/project/project1/moona_susno.png" alt="">
+                                        <a class="  folio-item__thumb-link" target=”blank” href="assets/img/project/project1/moona_susno.jpg" title="Gura" data-size="905x1280">
+                                         <img class="cover-bg-img" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" data-dsn-src="assets/img/project/project1/moona_susno.jpg" alt="">
                                         </a>
                                     </div>
 
@@ -375,8 +375,8 @@
                                 <div class="folio-item work-item mt-80 dsn-col-md-2 dsn-col-lg-3 Product column fanart" data-aos="fade-up">
                                     <div class="has-popup box-img before-z-index z-index-0 p-relative over-hidden folio-item__thumb"
                                         data-overlay="0">
-                                        <a class="  folio-item__thumb-link" target=”blank” href="assets/img/project/project1/hakozs.png" title="Gura" data-size="905x1280">
-                                         <img class="cover-bg-img" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" data-dsn-src="assets/img/project/project1/hakozs.png" alt="">
+                                        <a class="  folio-item__thumb-link" target=”blank” href="assets/img/project/project1/hakozs.jpg" title="Gura" data-size="905x1280">
+                                         <img class="cover-bg-img" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" data-dsn-src="assets/img/project/project1/hakozs.jpg" alt="">
                                         </a>
                                     </div>
                                     <div class="folio-item__info">
@@ -392,8 +392,8 @@
                                 <div class="folio-item work-item mt-80 dsn-col-md-2 dsn-col-lg-3 Product column comm" data-aos="fade-up">
                                     <div class="has-popup box-img before-z-index z-index-0 p-relative over-hidden folio-item__thumb"
                                         data-overlay="0">
-                                        <a class="  folio-item__thumb-link" target=”blank” href="assets/img/project/project1/Clopez.png" title="Gura" data-size="905x1280">
-                                         <img class="cover-bg-img" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" data-dsn-src="assets/img/project/project1/Clopez.png" alt="Clopez">
+                                        <a class="  folio-item__thumb-link" target=”blank” href="assets/img/project/project1/Clopez.jpg" title="Gura" data-size="905x1280">
+                                         <img class="cover-bg-img" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" data-dsn-src="assets/img/project/project1/Clopez.jpg" alt="Clopez">
                                         </a>
                                     </div>
                                     <div class="folio-item__info">
@@ -409,8 +409,8 @@
                                 <div class="folio-item work-item mt-80 dsn-col-md-2 dsn-col-lg-3 Product column comm loli bikini" data-aos="fade-up">
                                     <div class="has-popup box-img before-z-index z-index-0 p-relative over-hidden folio-item__thumb"
                                         data-overlay="0">
-                                        <a class="  folio-item__thumb-link" target=”blank” href="assets/img/project/project1/CnBD.png" title="CB" data-size="905x1280">
-                                         <img class="cover-bg-img" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" data-dsn-src="assets/img/project/project1/CnBD.png" alt="CB">
+                                        <a class="  folio-item__thumb-link" target=”blank” href="assets/img/project/project1/CnBD.jpg" title="CB" data-size="905x1280">
+                                         <img class="cover-bg-img" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" data-dsn-src="assets/img/project/project1/CnBD.jpg" alt="CB">
                                         </a>
                                     </div>
                                     <div class="folio-item__info">
@@ -426,8 +426,8 @@
                                 <div class="folio-item work-item mt-80 dsn-col-md-2 dsn-col-lg-3 Product column commission bikini loli" data-aos="fade-up">
                                     <div class="has-popup box-img before-z-index z-index-0 p-relative over-hidden folio-item__thumb"
                                         data-overlay="0">
-                                        <a class="  folio-item__thumb-link" target=”blank” href="assets/img/project/project1/CnBLB.png" title="Gura" data-size="905x1280">
-                                         <img class="cover-bg-img" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" data-dsn-src="assets/img/project/project1/CnBLB.png" alt="CB">
+                                        <a class="  folio-item__thumb-link" target=”blank” href="assets/img/project/project1/CnBLB.jpg" title="Gura" data-size="905x1280">
+                                         <img class="cover-bg-img" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" data-dsn-src="assets/img/project/project1/CnBLB.jpg" alt="CB">
                                         </a>
                                     </div>
                                     <div class="folio-item__info">
@@ -443,7 +443,7 @@
                                 <div class="folio-item work-item mt-80 dsn-col-md-2 dsn-col-lg-3 Product column fanart loli" data-aos="fade-up">
                                     <div class="has-popup box-img before-z-index z-index-0 p-relative over-hidden folio-item__thumb"
                                         data-overlay="0">
-                                        <a class="  folio-item__thumb-link" target=”blank” href="assets/img/project/project1/GuraChristmas.png" title="Gura" data-size="905x1280">
+                                        <a class="  folio-item__thumb-link" target=”blank” href="assets/img/project/project1/Rushia Completed.png" title="Gura" data-size="905x1280">
                                          <img class="cover-bg-img" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" data-dsn-src="assets/img/project/project1/Rushia Completed.png" alt="">
                                         </a>
                                     </div>
@@ -454,15 +454,15 @@
                                      </div>
                                      <a target=”blank” href="#" title="Twitter" class="folio-item__project-link">Archived</a>
                                      <div class="folio-item__caption">
-                                        <p>Gawr Gura</p>
+                                        <p>Rushia</p>
                                     </div>
                                 </div>
 
                                 <div class="folio-item work-item mt-80 dsn-col-md-2 dsn-col-lg-3 Product column fanart" data-aos="fade-up">
                                     <div class="has-popup box-img before-z-index z-index-0 p-relative over-hidden folio-item__thumb"
                                         data-overlay="0">
-                                        <a class="  folio-item__thumb-link" target=”blank” href="assets/img/project/project1/GuraTweetEdited.png" title="Gura" data-size="905x1280">
-                                         <img class="cover-bg-img" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" data-dsn-src="assets/img/project/project1/GuraTweetEdited.png" alt="">
+                                        <a class="  folio-item__thumb-link" target=”blank” href="assets/img/project/project1/GuraTweetEdited.jpg" title="Gura" data-size="905x1280">
+                                         <img class="cover-bg-img" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" data-dsn-src="assets/img/project/project1/GuraTweetEdited.jpg" alt="">
                                         </a>
                                     </div>
                                     <div class="folio-item__info">
@@ -478,8 +478,8 @@
                                 <div class="folio-item work-item mt-80 dsn-col-md-2 dsn-col-lg-3 Product column commission loli" data-aos="fade-up">
                                     <div class="has-popup box-img before-z-index z-index-0 p-relative over-hidden folio-item__thumb"
                                         data-overlay="0">
-                                        <a class="  folio-item__thumb-link" target=”blank” href="assets/img/project/project1/rymddd ex reduced.png" title="Rymm" data-size="1280x905">
-                                         <img class="cover-bg-img" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" data-dsn-src="assets/img/project/project1/rymddd ex reduced.png" alt="CB">
+                                        <a class="  folio-item__thumb-link" target=”blank” href="assets/img/project/project1/rymddd ex reduced.jpg" title="Rymm" data-size="1280x905">
+                                         <img class="cover-bg-img" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" data-dsn-src="assets/img/project/project1/rymddd ex reduced.jpg" alt="CB">
                                         </a>
                                     </div>
                                     <div class="folio-item__info">
@@ -495,8 +495,8 @@
                                 <div class="folio-item work-item dsn-col-md-2 dsn-col-lg-3 Product column occhara" data-aos="fade-up">
                                     <div class="has-popup box-img before-z-index z-index-0 p-relative over-hidden folio-item__thumb"
                                         data-overlay="0">
-                                        <a class="  folio-item__thumb-link" target=”blank” href="assets/img/project/project1/CyanideNewreja.png" title="Cyanide" data-size="905x1280">
-                                            <img class="" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" data-dsn-src="assets/img/project/project1/CyanideNewreja.png" alt=""></a>
+                                        <a class="  folio-item__thumb-link" target=”blank” href="assets/img/project/project1/CyanideNewreja.jpg" title="Cyanide" data-size="905x1280">
+                                            <img class="" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" data-dsn-src="assets/img/project/project1/CyanideNewreja.jpg" alt=""></a>
                                     </div>
                     
                                     <div class="folio-item__info">
@@ -512,8 +512,8 @@
                                 <div class="folio-item work-item mt-80 dsn-col-md-2 dsn-col-lg-3 Product column occhara" data-aos="fade-up">
                                     <div class="has-popup box-img before-z-index z-index-0 p-relative over-hidden folio-item__thumb"
                                         data-overlay="0">
-                                        <a class="  folio-item__thumb-link" target=”blank” href="assets/img/project/project2/owl jacket.png" title="Rymm" data-size="905x1280">
-                                         <img class="cover-bg-img" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" data-dsn-src="assets/img/project/project2/owl jacket.png" alt="">
+                                        <a class="  folio-item__thumb-link" target=”blank” href="assets/img/project/project2/owl jacket.jpg" title="Rymm" data-size="905x1280">
+                                         <img class="cover-bg-img" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" data-dsn-src="assets/img/project/project2/owl jacket.jpg" alt="">
                                         </a>
                                     </div>
                     
@@ -532,8 +532,8 @@
                                 <div class="folio-item work-item mt-80 dsn-col-md-2 dsn-col-lg-3 Product column occhara" data-aos="fade-up">
                                     <div class="has-popup box-img before-z-index z-index-0 p-relative over-hidden folio-item__thumb"
                                         data-overlay="0">
-                                        <a class="  folio-item__thumb-link" target=”blank” href="assets/img/project/project1/Jacket.png" title="Biki" data-size="905x1280">
-                                         <img class="cover-bg-img" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" data-dsn-src="assets/img/project/project1/Jacket.png" alt="">
+                                        <a class="  folio-item__thumb-link" target=”blank” href="assets/img/project/project1/Jacket.jpg" title="Biki" data-size="905x1280">
+                                         <img class="cover-bg-img" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" data-dsn-src="assets/img/project/project1/Jacket.jpg" alt="">
                                         </a>
                                     </div>
                                     <div class="folio-item__info">
