--- a/Fanart.html
+++ b/Fanart.html
@@ -299,8 +299,8 @@
                                 <div class="folio-item work-item mt-80 dsn-col-md-2 dsn-col-lg-3 Product column maki" data-aos="fade-up">
                                     <div class="has-popup box-img before-z-index z-index-0 p-relative over-hidden folio-item__thumb"
                                         data-overlay="0">
-                                        <a class="  folio-item__thumb-link" target=”blank” href="assets/img/project/project1/Makima1.png" title="Makima" data-size="905x1280">
-                                         <img class="cover-bg-img" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" data-dsn-src="assets/img/project/project1/Makima1.png" alt="">
+                                        <a class="  folio-item__thumb-link" target=”blank” href="assets/img/project/project1/Makima1.jpg" title="Makima" data-size="905x1280">
+                                         <img class="cover-bg-img" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" data-dsn-src="assets/img/project/project1/Makima1.jpg" alt="">
                                         </a>
                                     </div>
 
@@ -319,8 +319,8 @@
                                 <div class="folio-item work-item mt-80 dsn-col-md-2 dsn-col-lg-3 Product column gura loli" data-aos="fade-up">
                                     <div class="has-popup box-img before-z-index z-index-0 p-relative over-hidden folio-item__thumb"
                                         data-overlay="0">
-                                        <a class="  folio-item__thumb-link" target=”blank” href="assets/img/project/project1/GuraTweetEdited.png" title="Gura" data-size="905x1280">
-                                         <img class="cover-bg-img" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" data-dsn-src="assets/img/project/project1/GuraTweetEdited.png" alt="">
+                                        <a class="  folio-item__thumb-link" target=”blank” href="assets/img/project/project1/GuraTweetEdited.jpg" title="Gura" data-size="905x1280">
+                                         <img class="cover-bg-img" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" data-dsn-src="assets/img/project/project1/GuraTweetEdited.jpg" alt="">
                                         </a>
                                     </div>
                                     <div class="folio-item__info">
@@ -336,8 +336,8 @@
                                 <div class="folio-item work-item mt-80 dsn-col-md-2 dsn-col-lg-3 Product column bocchi loli" data-aos="fade-up">
                                     <div class="has-popup box-img before-z-index z-index-0 p-relative over-hidden folio-item__thumb"
                                         data-overlay="0">
-                                        <a class="  folio-item__thumb-link" target=”blank” href="assets/img/project/project1/bocchi 1.png" title="Bocchi" data-size="905x1280">
-                                         <img class="cover-bg-img" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" data-dsn-src="assets/img/project/project1/bocchi 1.png" alt="Bocchi">
+                                        <a class="  folio-item__thumb-link" target=”blank” href="assets/img/project/project1/bocchi 1.jpg" title="Bocchi" data-size="905x1280">
+                                         <img class="cover-bg-img" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" data-dsn-src="assets/img/project/project1/bocchi 1.jpg" alt="Bocchi">
                                         </a>
                                     </div>
 
@@ -354,8 +354,8 @@
                                 <div class="folio-item work-item mt-80 dsn-col-md-2 dsn-col-lg-3 Product column bikini moona" data-aos="fade-up">
                                     <div class="has-popup box-img before-z-index z-index-0 p-relative over-hidden folio-item__thumb"
                                         data-overlay="0">
-                                        <a class="  folio-item__thumb-link" target=”blank” href="assets/img/project/project1/moona_susno.png" title="Moona" data-size="905x1280">
-                                         <img class="cover-bg-img" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" data-dsn-src="assets/img/project/project1/moona_susno.png" alt="">
+                                        <a class="  folio-item__thumb-link" target=”blank” href="assets/img/project/project1/moona_susno.jpg" title="Moona" data-size="905x1280">
+                                         <img class="cover-bg-img" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" data-dsn-src="assets/img/project/project1/moona_susno.jpg" alt="">
                                         </a>
                                     </div>
 
@@ -372,8 +372,8 @@
                                 <div class="folio-item work-item mt-80 dsn-col-md-2 dsn-col-lg-3 Product column loli baelz" data-aos="fade-up">
                                     <div class="has-popup box-img before-z-index z-index-0 p-relative over-hidden folio-item__thumb"
                                         data-overlay="0">
-                                        <a class="  folio-item__thumb-link" target=”blank” href="assets/img/project/project1/hakozs.png" title="Bae" data-size="905x1280">
-                                         <img class="cover-bg-img" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" data-dsn-src="assets/img/project/project1/hakozs.png" alt="">
+                                        <a class="  folio-item__thumb-link" target=”blank” href="assets/img/project/project1/hakozs.jpg" title="Bae" data-size="905x1280">
+                                         <img class="cover-bg-img" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" data-dsn-src="assets/img/project/project1/hakozs.jpg" alt="">
                                         </a>
                                     </div>
                                     <div class="folio-item__info">
@@ -391,8 +391,8 @@
                                 <div class="folio-item work-item mt-80 dsn-col-md-2 dsn-col-lg-3 Product column fanart loli" data-aos="fade-up">
                                     <div class="has-popup box-img before-z-index z-index-0 p-relative over-hidden folio-item__thumb"
                                         data-overlay="0">
-                                        <a class="  folio-item__thumb-link" target=”blank” href="assets/img/project/project1/Rushia Completed.png" title="Rushia" data-size="905x1280">
-                                         <img class="cover-bg-img" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" data-dsn-src="assets/img/project/project1/Rushia Completed.png" alt="">
+                                        <a class="  folio-item__thumb-link" target=”blank” href="assets/img/project/project1/Rushia Completed.jpg" title="Rushia" data-size="905x1280">
+                                         <img class="cover-bg-img" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" data-dsn-src="assets/img/project/project1/Rushia Completed.jpg" alt="">
                                         </a>
                                     </div>
 
