--- a/CommStatus.html
+++ b/CommStatus.html
@@ -50,7 +50,7 @@
     <!-- ========== Loading Page ========== -->
     <div class="preloader">
         <span class="percent">0</span>
-        <span class="loading-text text-uppercase">Loading ...</span>
+        <span class="loading-text text-uppercase">Hacking into status panel ...</span>
         <div class="preloader-bar">
             <div class="preloader-progress"></div>
         </div>
