--- a/Commissions.html
+++ b/Commissions.html
@@ -120,7 +120,7 @@
                             </a>
                         </li>
                         <li>
-                            <a href="oric.html">
+                            <a href="comminfo.html">
                                 <span class="dsn-title-menu">Commission Pricing/list</span>
     
                                 <span class="dsn-bg-arrow"></span>
@@ -486,7 +486,7 @@ class="header-page over-hidden p-relative header-padding-top header-padding-bott
                                         <span class="line-bg-right">Commissions through, Discord.</span>
                                     </p>
                                     <h2 class="section-title title-cap">Pricing and discord link</h2>
-                                    <a target=”_blank” href="oric.html" class="mt-30 dsn-button image-zoom effect-ajax" data-dsn="parallax">
+                                    <a target=”_blank” href="comminfo.html" class="mt-30 dsn-button image-zoom effect-ajax" data-dsn="parallax">
                                         <span class="dsn-border border-color-reverse-color"></span> Click here <span>⟶</span>
                                     </a>
                                     <br>
