--- a/allart copy.html
+++ b/allart copy.html
@@ -126,7 +126,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href="oric.html">
+                        <a href="comminfo.html">
                             <span class="dsn-title-menu">Commission Pricing/list</span>
 
                             <span class="dsn-bg-arrow"></span>
@@ -521,7 +521,7 @@
                                         <span class="line-bg-right">Commissions through, Discord.</span>
                                     </p>
                                     <h2 class="section-title title-cap">Pricing and discord link</h2>
-                                    <a target=”_blank” href="oric.html" class="mt-30 dsn-button image-zoom" data-dsn="parallax">
+                                    <a target=”_blank” href="comminfo.html" class="mt-30 dsn-button image-zoom" data-dsn="parallax">
                                         <span class="dsn-border border-color-reverse-color"></span> Click here <span>⟶</span>
                                     </a>
                                     <br>
