--- a/index.html
+++ b/index.html
@@ -424,7 +424,7 @@
                                 Want to commission me.. click this button for it!
                             </p>
 
-                            <a data-dsn-title="End" href="comminfo.html" class="mt-30 dsn-button image-zoom" data-dsn="parallax">
+                            <a data-dsn-title="End" href="comminfo.html" class="mt-30 dsn-button image-zoom effect-ajax" data-dsn="parallax">
                                 <span class="dsn-border border-color-reverse-color"></span> Commission <span>⟶</span>
                             </a>
 
@@ -513,7 +513,7 @@
                                         </p>
                                         <h2 class="section-title title-cap">Pricing and discord link</h2>
                                         <a target=”_blank” href="comminfo.html" class="mt-30 dsn-button image-zoom effect-ajax" data-dsn="parallax">
-                                            <span class="dsn-border border-color-reverse-color"></span> Click here <span>⟶</span>
+                                            <span class="dsn-border border-color-reverse-color "></span> Click here <span>⟶</span>
                                         </a>
                                         <br>
 
