--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
                                                         <a class="effect-ajax" data-dsn-ajax="slider">Welcome!</a>
                                                     </h1>
 
-                                                    <p class="max-w570 mt-30 description ">Scroll down and pick a category from bellow options to view my work!<br></p>
+                                                    <p class="max-w570 mt-30 description ">Scroll down and pick a category from options bellow to view my work!<br></p>
                                                 </div>
                                             </div>
 
