--- a/allaffffrt.html
+++ b/allaffffrt.html
@@ -275,6 +275,7 @@
                                         <button type="button" data-filter=".bikini">bikini</button>
                                         <button type="button" data-filter=".loli">loli</button>
                                         <button type="button" data-filter=".baelz">Hakoz Baelz</button>
+                                        <button type="button" data-filter=".male">Male</button>
 
                                     </div>
                                 </div>
@@ -303,8 +304,8 @@
                                 <div class="folio-item work-item mt-80 dsn-col-md-2 dsn-col-lg-3 Product column maki" data-aos="fade-up">
                                     <div class="has-popup box-img before-z-index z-index-0 p-relative over-hidden folio-item__thumb"
                                         data-overlay="0">
-                                        <a class="  folio-item__thumb-link" target=”blank” href="assets/img/project/project1/Makima1.png" title="Makima" data-size="905x1280">
-                                         <img class="cover-bg-img" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" data-dsn-src="assets/img/project/project1/Makima1.png" alt="">
+                                        <a class="  folio-item__thumb-link" target=”blank” href="assets/img/project/project1/Makima5sh.png" title="Makima" data-size="905x1280">
+                                         <img class="cover-bg-img" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" data-dsn-src="assets/img/project/project1/Makima5sh.png" alt="">
                                         </a>
                                     </div>
 
@@ -320,20 +321,38 @@
                                   
                               
 
-                                <div class="folio-item work-item mt-80 dsn-col-md-2 dsn-col-lg-3 Product column gura loli" data-aos="fade-up">
+                                <div class="folio-item work-item mt-80 dsn-col-md-2 dsn-col-lg-3 Product column maki" data-aos="fade-up">
                                     <div class="has-popup box-img before-z-index z-index-0 p-relative over-hidden folio-item__thumb"
                                         data-overlay="0">
-                                        <a class="  folio-item__thumb-link" target=”blank” href="assets/img/project/project1/GuraTweetEdited.png" title="Gura" data-size="905x1280">
-                                         <img class="cover-bg-img" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" data-dsn-src="assets/img/project/project1/GuraTweetEdited.png" alt="">
+                                        <a class="  folio-item__thumb-link" target=”blank” href="assets/img/project/project1/Makima4sh.png" title="Gura" data-size="905x1280">
+                                         <img class="cover-bg-img" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" data-dsn-src="assets/img/project/project1/Makima4sh.png" alt="">
                                         </a>
                                     </div>
                                     <div class="folio-item__info">
                                         <div class="folio-item__cat">illustration/FanArt</div>
-                                        <h4 class="folio-item__title"> Gawr Gura!</h4>
+                                        <h4 class="folio-item__title"> Makima!</h4>
                                      </div>
                                      <a target=”blank” href="https://twitter.com/kikiis_art/status/1450081152870408194" title="Twitter" class="folio-item__project-link">Twitter</a>
                                      <div class="folio-item__caption">
-                                        <p>Gawr Gura</p>
+                                        <p>Makima</p>
+                                    </div>
+                                </div>
+
+                                <div class="folio-item work-item mt-80 dsn-col-md-2 dsn-col-lg-3 Product column male" data-aos="fade-up">
+                                    <div class="has-popup  before-z-index z-index-0 p-relative over-hidden folio-item__thumb"
+                                        data-overlay="0">
+                                        <a class="  folio-item__thumb-link" target=”blank” href="assets/img/project/project1/Kenma01_Pixiv.png" title="Bocchi" data-size="905x1280">
+                                         <img class="cover-bg-img" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" data-dsn-src="assets/img/project/project1/Kenma01_Pixiv.png" alt="Kenma">
+                                        </a>
+                                    </div>
+
+                                    <div class="folio-item__info">
+                                        <div class="folio-item__cat">illustration/Study</div>
+                                        <h4 class="folio-item__title">Kenma!</h4>
+                                     </div>
+                                     <a target=”blank” href="https://twitter.com/shirozu07/status/1691494844580155392?s=20" title="Twitter" class="folio-item__project-link">Twitter</a>
+                                     <div class="folio-item__caption">
+                                        <p>Kenma</p>
                                     </div>
                                 </div>
 
@@ -351,7 +370,7 @@
                                      </div>
                                      <a target=”blank” href="https://twitter.com/shirozu07/status/1691494844580155392?s=20" title="Twitter" class="folio-item__project-link">Twitter</a>
                                      <div class="folio-item__caption">
-                                        <p>Squilli</p>
+                                        <p>Bocchi</p>
                                     </div>
                                 </div>
 
@@ -405,6 +424,41 @@
                                         <h4 class="folio-item__title"> Rushia!</h4>
                                      </div>
                                      <a target=”blank” href="#" title="Twitter" class="folio-item__project-link">Archived</a>
+                                     <div class="folio-item__caption">
+                                        <p>Gawr Gura</p>
+                                    </div>
+                                </div>
+
+                                <div class="folio-item work-item mt-80 dsn-col-md-2 dsn-col-lg-3 Product column maki" data-aos="fade-up">
+                                    <div class="has-popup box-img before-z-index z-index-0 p-relative over-hidden folio-item__thumb"
+                                        data-overlay="0">
+                                        <a class="  folio-item__thumb-link" target=”blank” href="assets/img/project/project1/Makima1.png" title="Makima" data-size="905x1280">
+                                         <img class="cover-bg-img" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" data-dsn-src="assets/img/project/project1/Makima1.png" alt="">
+                                        </a>
+                                    </div>
+
+                                    <div class="folio-item__info">
+                                        <div class="folio-item__cat">illustration/FanArt</div>
+                                        <h4 class="folio-item__title"> Makima!</h4>
+                                     </div>
+                                     <a target=”blank” href="https://twitter.com/shirozu07/status/1650585193139544064?s=20" title="Twitter" class="folio-item__project-link">Twitter</a>
+                                     <div class="folio-item__caption">
+                                        <p>Makima</p>
+                                    </div>
+                                </div>
+
+                                <div class="folio-item work-item mt-80 dsn-col-md-2 dsn-col-lg-3 Product column gura loli" data-aos="fade-up">
+                                    <div class="has-popup box-img before-z-index z-index-0 p-relative over-hidden folio-item__thumb"
+                                        data-overlay="0">
+                                        <a class="  folio-item__thumb-link" target=”blank” href="assets/img/project/project1/GuraTweetEdited.png" title="Gura" data-size="905x1280">
+                                         <img class="cover-bg-img" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" data-dsn-src="assets/img/project/project1/GuraTweetEdited.png" alt="">
+                                        </a>
+                                    </div>
+                                    <div class="folio-item__info">
+                                        <div class="folio-item__cat">illustration/FanArt</div>
+                                        <h4 class="folio-item__title"> Gawr Gura!</h4>
+                                     </div>
+                                     <a target=”blank” href="https://twitter.com/kikiis_art/status/1450081152870408194" title="Twitter" class="folio-item__project-link">Twitter</a>
                                      <div class="folio-item__caption">
                                         <p>Gawr Gura</p>
                                     </div>
