--- a/allart.html
+++ b/allart.html
@@ -273,6 +273,7 @@
                                         <button type="button" data-filter=".comm">Commission</button>
                                         <button type="button" data-filter=".bikini">bikini</button>
                                         <button type="button" data-filter=".loli">loli</button>
+                                        <button type="button" data-filter=".male">Male</button>
 
                                     </div>
                                 </div>
@@ -298,7 +299,7 @@
                                     </div>
                                 </div>
 
-                                <div class="folio-item work-item mt-80 dsn-col-md-2 dsn-col-lg-3 Product column maki" data-aos="fade-up">
+                                <div class="folio-item work-item mt-80 dsn-col-md-2 dsn-col-lg-3 Product column maki fanart" data-aos="fade-up">
                                     <div class="has-popup box-img before-z-index z-index-0 p-relative over-hidden folio-item__thumb"
                                         data-overlay="0">
                                         <a class="  folio-item__thumb-link" target=”blank” href="assets/img/project/project1/png/Makima5sh.png" title="Makima" data-size="905x1280">
@@ -316,7 +317,7 @@
                                     </div>
                                 </div>
                                   
-                                <div class="folio-item work-item mt-80 dsn-col-md-2 dsn-col-lg-3 Product column maki" data-aos="fade-up">
+                                <div class="folio-item work-item mt-80 dsn-col-md-2 dsn-col-lg-3 Product column maki fanart" data-aos="fade-up">
                                     <div class="has-popup box-img before-z-index z-index-0 p-relative over-hidden folio-item__thumb"
                                         data-overlay="0">
                                         <a class="  folio-item__thumb-link" target=”blank” href="assets/img/project/project1/png/Makima4sh.png" title="Gura" data-size="905x1280">
@@ -351,7 +352,7 @@
                                     </div>
                                 </div>
                                 
-                                <div class="folio-item work-item mt-80 dsn-col-md-2 dsn-col-lg-3 Product column male" data-aos="fade-up">
+                                <div class="folio-item work-item mt-80 dsn-col-md-2 dsn-col-lg-3 Product column male fanart" data-aos="fade-up">
                                     <div class="has-popup  before-z-index z-index-0 p-relative over-hidden folio-item__thumb"
                                         data-overlay="0">
                                         <a class="  folio-item__thumb-link" target=”blank” href="assets/img/project/project1/png/Kenma01_Pixiv.png" title="Bocchi" data-size="905x1280">
