--- a/Fanart.html
+++ b/Fanart.html
@@ -12,7 +12,7 @@
     <title>
         Rudy's Portfolio
     </title>
-    <meta content="Kiki's portfolio" property="og:title" />
+    <meta content="Rudy's portfolio" property="og:title" />
     <meta content="FanArts section" property="og:description" />
     <meta content="https://shirozu.tk/#a" property="og:url" />
     <meta content="#FFD6D6" data-react-helmet="true" name="theme-color" />
