--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <title>
         Rudy's Portfolio
     </title>
-    <meta content="Kiki's portfolio" property="og:title" />
+    <meta content="Rudy's portfolio" property="og:title" />
     <meta content="Home page" property="og:description" />
     <meta content="https://shirozu.tk/#a" property="og:url" />
 
