--- a/comminfo.html
+++ b/comminfo.html
@@ -254,7 +254,7 @@
                             <h2 class="section-title title-cap">Open! </h2>
                             <img src="https://media.discordapp.net/attachments/932639937214414908/1076206702053040168/919072185883185202.png?width=86&height=86">
                             <br>
-                            <p style="font-size: 15px;">2 slots open, please read the stuff below! and check out the TOS</p>
+                            <p style="font-size: 15px;">1 out of 2 slots remaining, please read the stuff below! and check out the TOS</p>
                         </div>
 
                        
