--- a/Fanart.html
+++ b/Fanart.html
@@ -619,11 +619,11 @@
 
                                 <div class="mb-30 d-flex text-left flex-column align-items-start">
                                     <p class="sub-heading line-shap line-shap-before mb-15">
-                                        <span class="line-bg-right">Commissions through, Discord.</span>
+                                        <span class="line-bg-right">Commissions Vgen/Twitter dm</span>
                                     </p>
-                                    <h2 class="section-title title-cap">Pricing and discord link</h2>
+                                    <h2 class="section-title title-cap">Pricing</h2>
                                     <a target=”_blank” href="comminfo.html" class="mt-30 dsn-button image-zoom effect-ajax" data-dsn="parallax">
-                                        <span class="dsn-border border-color-reverse-color"></span> Click here <span>⟶</span>
+                                        <span class="dsn-border border-color-reverse-color "></span> Click here <span>⟶</span>
                                     </a>
                                     <br>
 
