--- a/comminfo.html
+++ b/comminfo.html
@@ -38,7 +38,7 @@
     <!-- ========== Loading Page ========== -->
     <div class="preloader">
         <span class="percent ">0</span>
-        <span class="loading-text text-uppercase">Buying Cookies ...</span>
+        <span class="loading-text text-uppercase">Downloading Files ...</span>
         <div class="preloader-bar">
             <div class="preloader-progress"></div>
         </div>
@@ -754,12 +754,15 @@
                                                 </li>
     
                                                 <li class="over-hidden">
-                                                    <a href="https://www.pixiv.net/en/users/72475260" data-dsn="parallax" target="_blank" rel="nofollow">Pixiv</a
+                                                    <a  class="link-hover"
+                                                    data-hover-text="Visit?" href="https://www.pixiv.net/en/users/72475260" data-dsn="parallax" target="_blank" rel="nofollow">Pixiv</a
                               >
                             </li>
-                            <li class="over-hidden">
+                            <li class="over-hidden ">
                               <a
                                 href="https://twitter.com/shirozu07"
+                                class="link-hover"
+                                data-hover-text="Visit?"
                                 data-dsn="parallax"
                                 target="_blank"
                                 rel="nofollow"
@@ -784,7 +787,7 @@
                             target="_blank"
                             rel="nofollow"
                             href='https://twitter.com/intent/follow?original_referer=https%3A%2F%2Fpublish.twitter.com%2F&screen_name=shirozu07'
-                            >Kiroki Shirozu</a>
+                            >RUUUDY</a>
     
                                                     </h5>
                                         </div>
