--- a/index.html
+++ b/index.html
@@ -220,12 +220,17 @@
                  <div
                      class="content-hero p-relative d-flex align-items-center text-center flex-column h-100 dsn-hero-parallax-title">
                      
-                     <h1 style="color:#ffc400;" class="title mt-30 dsn-load-animate">
+                     <h1 style="color:#ffc400; " class="title mt-30 dsn-load-animate">
                          RUUUDY
                      </h1>
+                     <hr style="width:50%;text-align:left;margin-left:0; color: #ffc400; opacity: 0.3;">
+                     <br>
                      <p class="subtitle p-relative line-shap dsn-load-animate ">
-                        <span class="pl-10 pr-10 background-main">{shirozu20@gmail.com}</span>
+                        <span class="pl-10 text-center">Hello, I'm RUUUDY. An illustrator/painter,<br> Mainly drawing Anime, Semi-realism illustrations.</span>
+                       
                     </p>
+                    <br>
+                    <h6><span class="pl-10 pr-10 background-main">(Email: shirozu20@gmail.com)</span></h6>
                  </div>
              </div>
          </header>
