--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
                                         <div class="folio-item__cat">illustration/Commission 2024</div>
                                         <h4 class="folio-item__title"> Reze!</h4>
                                      </div>
-                                     <a target=”blank” href="https://x.com/shirozu07/status/1832947875682177117" title="Twitter" class="folio-item__project-link">Twitter</a>
+                                     <a target=”blank” href="https://x.com/shirozu07/status/1763690998214119754?s=19" title="Twitter" class="folio-item__project-link">Twitter</a>
                                      <div class="folio-item__caption">
                                         <p>Reze</p>
                                     </div>
@@ -298,7 +298,7 @@
                                         <div class="folio-item__cat">illustration/Commission 2024</div>
                                         <h4 class="folio-item__title"> Suisei!</h4>
                                      </div>
-                                     <a target=”blank” href="https://x.com/shirozu07/status/1832947875682177117" title="Twitter" class="folio-item__project-link">Twitter</a>
+                                     <a target=”blank” href="https://x.com/shirozu07/status/1818442110665670686?s=19" title="Twitter" class="folio-item__project-link">Twitter</a>
                                      <div class="folio-item__caption">
                                         <p>Suisei</p>
                                     </div>
@@ -337,7 +337,7 @@
                                         <div class="folio-item__cat">illustration/fanart 2024</div>
                                         <h4 class="folio-item__title"> Ellen Joe!</h4>
                                      </div>
-                                     <a target=”blank” href="https://x.com/shirozu07/status/1832947875682177117" title="Twitter" class="folio-item__project-link">Twitter</a>
+                                     <a target="Twitter" href="https://x.com/shirozu07/status/1818442110665670686?s=19" class="folio-item__project-link">Twitter</a>
                                      <div class="folio-item__caption">
                                         <p>Ellen</p>
                                     </div>
