--- a/index.html
+++ b/index.html
@@ -324,25 +324,27 @@
                                     </div>
                                 </div>
                                 <!-- ========== IMAGE END ========== -->
- <!-- ========== IMAGE: Ellen Joe ========== -->
+
+                                <!-- ========== IMAGE: Ellen Joe ========== -->
                                  <div class="folio-item work-item mt-80 dsn-col-md-2 dsn-col-lg-3 Product column fanart " data-aos="fade-up">
                                     <div class="has-popup box-img before-z-index z-index-0 p-relative over-hidden folio-item__thumb"
                                         data-overlay="0">
-                                        <a class="  folio-item__thumb-link" target=”blank” href="assets\Artworks NEW\popup_highres/ELLEN JOE 1 FULL.png" title="Ellen" data-size="905x1280">
-                                         <img class="cover-bg-img" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" data-dsn-src="assets\Artworks NEW\ELLEN JOE 1 FULL.png" alt="">
+                                        <a class="  folio-item__thumb-link" target=”blank” href="assets\Artworks NEW\Jinhsi_Full Res.png" title="Jinshi" data-size="905x1280">
+                                         <img class="cover-bg-img" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" data-dsn-src="assets\Artworks NEW\popup_highres\Jinhsi_Full Res.png" alt="">
                                         </a>
                                     </div>
 
                                     <div class="folio-item__info">
                                         <div class="folio-item__cat">illustration/fanart 2024</div>
-                                        <h4 class="folio-item__title"> Ellen Joe!</h4>
+                                        <h4 class="folio-item__title">Jinshi!</h4>
                                      </div>
-                                     <a target="Twitter" href="https://x.com/shirozu07/status/1816242739085717780?s=19" class="folio-item__project-link">Twitter</a>
+                                     <a target="Twitter" href="https://x.com/shirozu07/status/1797444769162907717" class="folio-item__project-link">Twitter</a>
                                      <div class="folio-item__caption">
-                                        <p>Ellen</p>
+                                        <p>Jinshi</p>
                                     </div>
                                 </div>
                                 <!-- ========== IMAGE END ========== -->
+
                                  <!-- ========== IMAGE: VAMP ========== -->
                                  <div class="folio-item work-item mt-80 dsn-col-md-2 dsn-col-lg-3 Product column bikini moona vtube comm" data-aos="fade-up">
                                     <div class="has-popup box-img before-z-index z-index-0 p-relative over-hidden folio-item__thumb"
@@ -417,7 +419,7 @@
                                         <div class="folio-item__cat">illustration/FanArt 2024</div>
                                         <h4 class="folio-item__title"> Makima!</h4>
                                      </div>
-                                     <a target=”blank” href="https://x.com/shirozu07/status/1706774801447281015?s=20" title="Twitter" class="folio-item__project-link">Twitter</a>
+                                     <a target=”blank” href="https://x.com/shirozu07/status/1781296292221628714" title="Twitter" class="folio-item__project-link">Twitter</a>
                                      <div class="folio-item__caption">
                                         <p>makima13</p>
                                     </div>
@@ -437,7 +439,7 @@
                                         <div class="folio-item__cat">illustration/FanArt (click to view full)</div>
                                         <h4 class="folio-item__title"> Makima!</h4>
                                      </div>
-                                     <a target=”blank” href="https://x.com/shirozu07/status/1706774801447281015?s=20" title="Twitter" class="folio-item__project-link">Twitter</a>
+                                     <a target=”blank” href="https://x.com/shirozu07/status/1789802120549474610" title="Twitter" class="folio-item__project-link">Twitter</a>
                                      <div class="folio-item__caption">
                                         <p>Makima</p>
                                     </div>
@@ -457,7 +459,7 @@
                                         <div class="folio-item__cat">illustration/FanArt 2023</div>
                                         <h4 class="folio-item__title"> Makima!</h4>
                                      </div>
-                                     <a target=”blank” href="https://x.com/shirozu07/status/1706774801447281015?s=20" title="Twitter" class="folio-item__project-link">Twitter</a>
+                                     <a target=”blank” href="https://x.com/shirozu07/status/1762282174177485127" title="Twitter" class="folio-item__project-link">Twitter</a>
                                      <div class="folio-item__caption">
                                         <p>Makima</p>
                                     </div>
@@ -477,7 +479,7 @@
                                         <div class="folio-item__cat">illustration/FanArt 2023</div>
                                         <h4 class="folio-item__title"> Frieren!</h4>
                                      </div>
-                                     <a target=”blank” href="https://x.com/shirozu07/status/1706774801447281015?s=20" title="Twitter" class="folio-item__project-link">Twitter</a>
+                                     <a target=”blank” href="https://x.com/shirozu07/status/1766988198683775021" title="Twitter" class="folio-item__project-link">Twitter</a>
                                      <div class="folio-item__caption">
                                         <p>Frieren</p>
                                     </div>
@@ -497,7 +499,7 @@
                                         <div class="folio-item__cat">illustration/FanArt 2024</div>
                                         <h4 class="folio-item__title"> Fern!</h4>
                                      </div>
-                                     <a target=”blank” href="https://x.com/shirozu07/status/1706774801447281015?s=20" title="Twitter" class="folio-item__project-link">Twitter</a>
+                                     <a target=”blank” href="https://x.com/shirozu07/status/1738435711731458489" title="Twitter" class="folio-item__project-link">Twitter</a>
                                      <div class="folio-item__caption">
                                         <p>Fern</p>
                                     </div>
@@ -518,7 +520,7 @@
                                         <div class="folio-item__cat">illustration/fanart 2024</div>
                                         <h4 class="folio-item__title"> Ellen Joe!</h4>
                                      </div>
-                                     <a target=”blank” href="https://x.com/shirozu07/status/1832947875682177117" title="Twitter" class="folio-item__project-link">Twitter</a>
+                                     <a target=”blank” href="https://x.com/shirozu07/status/1816242739085717780" title="Twitter" class="folio-item__project-link">Twitter</a>
                                      <div class="folio-item__caption">
                                         <p>Ellen</p>
                                     </div>
